# docker-unpack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml  test.yml
src/docker_unpack/: apptainer_base_env.py  cli.py  utils.py
tests/: test_sanity.py
tests/integration/compression/: Dockerfile  test.sh
tests/integration/environment/: test.sh
tests/integration/whiteout/: Dockerfile  README.md  test.sh
